--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,13 @@ main p{
     margin-bottom: 20px;
 }
 
+main img.home{
+    max-width: 500px;
+    max-height: 300px;
+    display: block;
+    margin: auto;
+}
+
 
 footer{
     background-color: black;
