--- a/css/style.css
+++ b/css/style.css
@@ -115,8 +115,7 @@ main p{
 }
 
 main img.home{
-    max-width: 300px;
-    max-height: 300px;
+    min-width: 300px;
     display: block;
     margin: auto;
 }
