--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,12 @@
     padding: 0px;
     box-sizing: border-box;
 }
-nav{
+header nav{
     text-align: right;
     margin-left: 20px;
 }
 
-nav a{
+header nav > a{
     text-decoration: none;
     font-size: 23px;
     color: white;
