--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,14 @@
     padding: 0px;
     box-sizing: border-box;
 }
+div.config_logo{
+    width: 100%;
+    height: 70px;
+    background-image: url("../image/RAlogo.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    
+}
 header nav{
     text-align: right;
     margin-left: 20px;
