--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ header p{
     margin-top: 7px;
 }
 body{
-    background-color: var(--cor4  );
+    background-color: #EEE2DB;
 }
 
 main{
@@ -131,4 +131,15 @@ footer{
     color: white;
     text-align: center;
     padding: 20px;
+}
+
+
+div#cat{
+    width: 600px;
+    height: 300px;
+    background-image: url("../img-post-nft/cat.PNG");
+    background-position: center top;
+    margin: auto;
+    background-attachment: fixed;
+    background-size: contain;
 }
