--- a/css/style.css
+++ b/css/style.css
@@ -136,11 +136,11 @@ footer{
 
 div#cat{
     width: 600px;
-    height: 300px;
+    height: 400px;
     background-image: url("../img-post-nft/cat.PNG");
-    background-position: center top;
+    background-position: center center;
     margin: auto;
     background-attachment: fixed;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
